[metadata]
name = lepo
version = attr:lepo.__version__
url = https://github.com/akx/lepo
author = Aarni Koskela
author_email = akx@iki.fi
maintainer = Aarni Koskela
maintainer_email = akx@iki.fi
license = MIT

[options]
install_requires =
    Django>=3.0
    iso8601
    jsonschema~=3.2
    marshmallow~=3.0
packages = find:
include_package_data = True

[options.packages.find]
exclude =
    lepo_tests
    lepo_tests.*

[tool:pytest]
DJANGO_SETTINGS_MODULE = lepo_tests.settings
filterwarnings =
    error
    ignore:.*packaging.version.*:DeprecationWarning
    ignore:.*USE_L10N.*:PendingDeprecationWarning

[flake8]
max-line-length = 119
max-complexity = 10

[isort]
profile = black
multi_line_output = 3

